fixed about-customprod text align w/ flex

--- a/css/home.css
+++ b/css/home.css
@@ -115,17 +115,26 @@ h4 {font-size: 1.25rem;}
 .about-text {
     grid-column: auto / span 12;
     background-color: var(--green);
-    padding: 1.75rem 1.75rem;
+    /* padding: 1.75rem 1.75rem; */
     aspect-ratio: 1/1;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    padding: 1.75rem;
 }
 
 .customprod-text {
     grid-column: auto / span 12;
     background-color: var(--orange);
-    padding-top: 4rem;
-    padding-left: 1.5rem;
-    padding-right: 1.5rem;
     aspect-ratio: 1/1;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    padding: 1.75rem;
 }
 
 .customprod-image {
